syntax = "proto3";

package com.amazonaws.athena.connector.lambda.proto.records;

import 'Block.proto';

option java_multiple_files = true;

message ReadRecordsResponse {
  optional string type = 1 [json_name="@type"];
  optional string catalogName = 2;
  optional com.amazonaws.athena.connector.lambda.proto.data.Block records = 3;
}
